# reqless-py

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  VERSION  Vagrantfile  forgetful-bench.py  provision.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  whitelist.txt
.github/workflows/: main-branch.yaml  main-build-and-publish.yaml  main-build-and-publish.yml  other-branch.yaml  other-check-quality-and-tests.yaml  other-check-quality-and-tests.yml  release.yaml
.meta/coverage/: report.txt
qless/: __init__.py  config.py  exceptions.py  job.py  listener.py  logger.py  profile.py  queue.py  throttle.py  util.py
qless/abstract/: __init__.py  abstract_client.py  abstract_config.py  abstract_job.py  abstract_job_data.py  abstract_job_processor.py  abstract_jobs.py  abstract_queue.py  abstract_queue_identifiers_transformer.py  abstract_queue_jobs.py  abstract_queue_resolver.py  abstract_queues.py  abstract_throttle.py  abstract_throttles.py  abstract_workers.py
qless/queue_resolvers/: __init__.py  abstract_queue_resolver.py  qmore_dynamic_mapping_queue_identifiers_transformer.py  qmore_dynamic_priority_queue_identifiers_transformer.py  transforming_queue_resolver.py
qless/workers/: __init__.py  forking.py  greenlet.py  serial.py  util.py  worker.py
qless_test/: common.py  test_client.py  test_config.py  test_events.py  test_forking.py  test_greenlet.py  test_job.py  test_job_processor_api.py  test_listener.py  test_qmore_client.py  test_qmore_dynamic_mapping_queue_identifiers_transformer.py  test_qmore_dynamic_priority_queue_identifiers_transformer.py  test_queue.py  test_serial.py  test_transforming_queue_resolver.py  test_worker.py  test_worker_util.py
qmore/: client.py
reqless/: __init__.py  config.py  events.py  exceptions.py  future.py  importer.py  job.py  listener.py  logger.py  proctitle.py  profile.py  queue.py  queue_patterns.py  throttle.py
reqless/abstract/: __init__.py  abstract_client.py  abstract_config.py  abstract_job.py  abstract_job_processor.py  abstract_jobs.py  abstract_queue.py  abstract_queue_identifiers_transformer.py  abstract_queue_patterns.py  abstract_queues.py  abstract_throttle.py  abstract_throttles.py
reqless/lua/: reqless-lib.lua  reqless.lua
reqless/models/: __init__.py  queue_priority_pattern.py
reqless/qmore/: client.py
reqless/queue_resolvers/: __init__.py  dynamic_mapping_queue_identifiers_transformer.py  dynamic_priority_queue_identifiers_transformer.py  qmore_dynamic_mapping_queue_identifiers_transformer.py  qmore_dynamic_priority_queue_identifiers_transformer.py  transforming_queue_resolver.py
reqless/workers/: __init__.py  base_worker.py  forking.py  forking_worker.py  gevent_worker.py  greenlet.py  main_worker.py  serial.py  serial_worker.py  signals.py  util.py  worker.py
reqless_test/: common.py  test_client.py  test_config.py  test_events.py  test_forking.py  test_future.py  test_greenlet.py  test_importer.py  test_job.py  test_job_processor_api.py  test_listener.py  test_qmore_client.py  test_qmore_dynamic_mapping_queue_identifiers_transformer.py  test_qmore_dynamic_priority_queue_identifiers_transformer.py  test_queue.py  test_queue_patterns.py  test_serial.py  test_transforming_queue_resolver.py  test_worker.py  test_worker_util.py
reqless_test/qmore/: test_qmore_client.py
reqless_test/queue_resolvers/: test_dynamic_mapping_queue_identifiers_transformer.py  test_dynamic_priority_queue_identifiers_transformer.py  test_qmore_dynamic_mapping_queue_identifiers_transformer.py  test_qmore_dynamic_priority_queue_identifiers_transformer.py  test_transforming_queue_resolver.py
reqless_test/test_helpers/: __init__.py
reqless_test/workers/: test_base_worker.py  test_forking_worker.py  test_gevent_worker.py  test_main_worker.py  test_serial_worker.py
test/: common.py  test_client.py  test_config.py  test_events.py  test_forking.py  test_greenlet.py  test_job.py  test_queue.py  test_serial.py  test_worker.py
